# EIC-ECAL

./: README.md  hamarya.tar.xz
calorimeter/: CMakeLists.txt  calor.cc  gui.mac  init_vis.mac  plotHisto.C  plotNtuple.C  run1.mac
calorimeter/include/: Action.hh  AddOptics.hh  Analysis.hh  CatodSD.hh  Catodhit.hh  Connstants.hh  DetectorConstruction.hh  DetectorHit.hh  DetectorSD.hh  Event.hh  PrimeryGenerator.hh  Run.hh  ce_EMCAL.hh
calorimeter/src/: Action.cc  CatodSD.cc  DetectorConstruction.cc  DetectorHit.cc  DetectorSD.cc  Event.cc  PrimeryGenerator.cc  Run.cc
output/1X1/20cm/: 10Gev-gamma-1000.root  1Gev-gamma-1000.root  2Gev-gamma-1000.root  3Gev-gamma-1000.root  4Gev-gamma-1000.root  5Gev-gamma-1000.root  6Gev-gamma-1000.root  7Gev-gamma-1000.root  8Gev-gamma-1000.root  9Gev-gamma-1000.root
output/1X1/40cm/: 10Gev-gamma-1000.root  1Gev-gamma-1000.root  2Gev-gamma-1000.root  3Gev-gamma-1000.root  4Gev-gamma-1000.root  5Gev-gamma-1000.root  6Gev-gamma-1000.root  7Gev-gamma-1000.root  8Gev-gamma-1000.root  9Gev-gamma-1000.root
output/1X1/50cm/: 10Gev-gamma-1000.root  1Gev-gamma-1000.root  2Gev-gamma-1000.root  3Gev-gamma-1000.root  4Gev-gamma-1000.root  5Gev-gamma-1000.root  6Gev-gamma-1000.root  7Gev-gamma-1000.root  8Gev-gamma-1000.root  9Gev-gamma-1000.root
output/3X3/20cm/: 100Gev-electron-1000.root  10Gev-electron-1000.root  10Gev-gamma-1000.root  1Gev-electron-1000.root  1Gev-gamma-1000.root  20Gev-electron-1000.root  2Gev-gamma-1000.root  30Gev-electron-1000.root  3Gev-gamma-1000.root  40Gev-electron-1000.root  4Gev-gamma-1000.root  (+10 more)
(+63 files in other folders)
